# shengsionglang

./: .gitignore  LICENSE  Makefile  README.md
docs/: index.html
reference-interpreter/: README.md  __init__.py  ast_nodes.py  cli.py  interpreter.py  lexer.py  parser.py  pyproject.toml  runtime.py
reference-interpreter/examples/: supermarket.sheng
reference-interpreter/tests/: conftest.py  test_cli.py  test_domain.py  test_interpreter.py  test_lexer.py  test_parser.py  test_runtime.py
src/: shengc.c
tests/: test_domain.py  test_language.py
